--- a/yuanj.top/RNA-Seq 上游分析学习.html
+++ b/yuanj.top/RNA-Seq 上游分析学习.html
@@ -1,10 +1,10 @@
-<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/posts/rna-seq-analysis-learning.md">仓库源文</a>，<a href="https://yuanj.top/rna-seq-analysis-learning">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/rna-seq-analysis-learning.md">仓库源文</a>，<a href="https://yuanj.top/rna-seq-analysis-learning">站点原文</a></h2>
 <p>转录组测序的研究对象为特定细胞在某一功能状态下所能转录出来的所有 RNA 的总和，包括 mRNA 和非编码 RNA。相对于传统的芯片杂交平台，转录组测序无需预先针对已知序列设计探针，即可对任意物种的整体转录活动进行检测，提供更准确的数字化信号、更高的检测通量以及更广泛的检测范围。基于高通量测序平台的转录组测序技术能够全面获得物种特定组织或器官的转录本信息，从而进行基因表达水平研究、新转录本发现研究、转录本结构变异研究等。</p>
 &lt;!--more--&gt;
 
 <h2>RNA-seq 概述</h2>
 <p>RNA-seq 是研究转录组应用最广泛，也是最重要的技术之一。RNA-seq 分析主要包括序列比对、转录本拼接、表达定量、差异分析、融合基因检测、可变剪接、RNA 编辑和突变检测等。具体流程和常用工具如下图所示，通常的分析不一定需要走完全部流程，可按需进行，某些步骤可以跳过或简化。</p>
-<p><img alt="" src="/images/20230907019612.jpg"/></p>
+<p><img alt="" src="/i/20230907019612.jpg"/></p>
 <p>RNA-seq 中最常用的分析方法就是找出差异表达基因 (Differential gene expression, DEG)。在实验室中，标准分析流程包含三个步骤：</p>
 <ul>
 <li><strong>Step 1</strong>: 构建测序文库，包括提取 RNA、富集 mRNA 或清除核糖体 RNA、合成 cDNA、加上接头。</li>
@@ -35,7 +35,7 @@
 <li><strong>Genome</strong>：一个生物体的所有遗传信息。</li>
 </ul>
 <h2>大致流程</h2>
-<p><img alt="" src="/images/20230907184128.jpg"/></p>
+<p><img alt="" src="/i/20230907184128.jpg"/></p>
 <h2>软件安装</h2>
 <p>只需要使用 conda 就可以安装所有需要的软件，主要使用的软件有以下一些：</p>
 <ul>
@@ -66,11 +66,11 @@ conda install bioconda::multiqc
 <h2>数据获取与预处理</h2>
 <h3>测序数据下载</h3>
 <p>先在 NCBI 的 SRA 数据库搜索感兴趣的物种：</p>
-<p><img alt="" src="/images/20230907183434.jpg"/></p>
+<p><img alt="" src="/i/20230907183434.jpg"/></p>
 <p>选择符合自己要求的文章，找到下面 Runs 这里，点击 SRR 开头的编号：</p>
-<p><img alt="" src="/images/20230907183745.jpg"/></p>
+<p><img alt="" src="/i/20230907183745.jpg"/></p>
 <p>查看数据是否符合要求：</p>
-<p><img alt="" src="/images/20230907183830.jpg"/></p>
+<p><img alt="" src="/i/20230907183830.jpg"/></p>
 <p>文件是 <code>***_1.fq.gz</code>、<code>***_2.fq.gz</code> 这种是双端测序数据，我们需要这种双端测序的数据来进行 RNA-seq 分析。</p>
 <p>如果数据是双端测序的，那么就复制 SRR 编号，使用 sratools 下载，例如：</p>
 <pre><code class="lang-bash">prefetch SRR8956151
@@ -142,7 +142,7 @@ mv Oryza_sativa.IRGSP-1.0.57.gff3 oryza_sativa.gff3
 multiqc ./fastqc_report # 将多个质量检测报告合并
 </code></pre>
 <p>程序运行完成后会输出一堆 html 文件和 zip 压缩包，html 是网页版报告，zip 是本地宝报告，下载到本地用浏览器打开就可以看到质量检测报告了</p>
-<p><img alt="" src="/images/20230907196142.jpg"/></p>
+<p><img alt="" src="/i/20230907196142.jpg"/></p>
 <p>左侧 Summary 部分就是整个报告的目录，整个报告分成若干个部分</p>
 <ul>
 <li>合格：绿色的√</li>
@@ -158,7 +158,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 <li>Sequence Duplication Levels：影响测序的因素太多，查看是否存在污染，数据处理时是否需要去冗余；现在数据量都可以满足需求，因此前期数据处理时，尽量高标准，严格质控</li>
 </ul>
 <p><strong>Basic Statistics</strong></p>
-<p><img alt="" src="/images/20230907191139.jpg"/></p>
+<p><img alt="" src="/i/20230907191139.jpg"/></p>
 <p>每个位置的碱基的测序质量</p>
 <ul>
 <li>Encoding：指测序平台的版本和相应的编码版本号</li>
@@ -167,7 +167,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 <li>%GC：是我们需要重点关注的一个指标，这个值表示的是整体序列中的 GC 含量，这个数值一般是物种特异的，比如人类细胞就是 42%左右，如果测序原始数据的 GC 含量远远偏离这个比例，说明测序数据存在一定偏好性，如果直接用测序数据，会影响后续的 CNV 和变异检测的分析</li>
 </ul>
 <p><strong>Per base sequence quality</strong></p>
-<p><img alt="" src="/images/20230907191414.jpg"/></p>
+<p><img alt="" src="/i/20230907191414.jpg"/></p>
 <ul>
 <li>横轴代表位置（第 1 到 150 个碱基）</li>
 <li>纵轴代表 quality</li>
@@ -180,7 +180,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 </ul>
 <p>一般要求此图中，所有位置的 10%分位数大于 20，否则切除 20 以下的碱基，从而保证后续分析的正确性</p>
 <p><strong>Per tile sequence quality</strong></p>
-<p><img alt="" src="/images/20230907191547.jpg"/></p>
+<p><img alt="" src="/i/20230907191547.jpg"/></p>
 <p>每个 tile 测序的测序质量</p>
 <ul>
 <li>tile：每一次测序荧光扫描的最小单位</li>
@@ -189,7 +189,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 </ul>
 <p>检查 reads 中每一个碱基位置在不同的测序小孔之间的偏离度，蓝色表示低于平均偏离度，偏离度小，质量好；越红表示偏离平均质量越多，质量也越差，如果出现质量问题可能是短暂的，如有气泡产生，也可能是长期的，如在某一小孔中存在残骸，问题不大，可以看到我的这个数据几乎没有瑕疵</p>
 <p><strong>Per sequence quality scores</strong></p>
-<p><img alt="" src="/images/20230907191735.jpg"/></p>
+<p><img alt="" src="/i/20230907191735.jpg"/></p>
 <p>每条序列质量得分的分布情况</p>
 <ul>
 <li>横轴是平均质量得分</li>
@@ -199,7 +199,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 </ul>
 <p>假如我测的 1 条序列长度为 101bp，那么这 101 个位置每个位置 Q 值的平均值就是这条 reads 的质量值，我这个数据的质量不错，reads 大都集中在高分上，纵轴数值越大，该序列测序错误的可能就越小</p>
 <p><strong>Per base sequence content</strong></p>
-<p><img alt="" src="/images/20230907192429.jpg"/></p>
+<p><img alt="" src="/i/20230907192429.jpg"/></p>
 <p>统计 reads 每个位置 ATCG 四种碱基的分布</p>
 <ul>
 <li>横轴是 1 - 101 bp；纵轴是百分比</li>
@@ -207,7 +207,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 <li>理论上来说，A 和 T 应该相等，G 和 C 应该相等，但是一般测序的时候，刚开始测序仪状态不稳定，很可能出现上图的情况，像这种情况，即使测序的得分很高，也需要 cut 开始部分的序列信息</li>
 </ul>
 <p><strong>Per sequence GC content</strong></p>
-<p><img alt="" src="/images/20230907192546.jpg"/></p>
+<p><img alt="" src="/i/20230907192546.jpg"/></p>
 <p>序列平均 GC 含量分布</p>
 <ul>
 <li>横轴是百分比</li>
@@ -217,7 +217,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 </ul>
 <p>蓝红色线应该比较接近才比较好，当红色的线出现双峰，很有可能是混入了其他物种的 DNA 序列，比如我这张图</p>
 <p><strong>Per base N content</strong></p>
-<p><img alt="" src="/images/20230907192927.jpg"/></p>
+<p><img alt="" src="/i/20230907192927.jpg"/></p>
 <p>每个位置无法检测的值的比例，当测序仪无法确定是何种碱基时，用 N 表示</p>
 <ul>
 <li>当任意位置的 N 的比例超过 5%，报"WARN"</li>
@@ -225,11 +225,11 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 </ul>
 <p>这种情况是正常的。但当 Y 轴在 0%-100%的范围内也能看到"鼓包"时，说明测序系统出了问题</p>
 <p><strong>Sequence Length Distribution</strong></p>
-<p><img alt="" src="/images/20230907193220.jpg"/></p>
+<p><img alt="" src="/i/20230907193220.jpg"/></p>
 <p>序列测序长度分布</p>
 <p>每次测序仪测出来的长度在理论上应该是完全相等的，但是总会有一些偏差，当测序的长度不同时，如果很严重，则表明测序仪在此次测序过程中产生的数据不可信，比如我的这个图中，150pb 是最主要的，其他的几乎没有，所以数据的质量还是比较高的</p>
 <p><strong>Sequence Duplication Levels</strong></p>
-<p><img alt="" src="/images/20230907193336.jpg"/></p>
+<p><img alt="" src="/i/20230907193336.jpg"/></p>
 <p>统计 reads 重复水平</p>
 <ul>
 <li>横坐标是重复的次数</li>
@@ -240,10 +240,10 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 <p>测序本身就会产生重复 reads, 测序深度越高，reads 重复数越大；如果重复出现峰值，就提示可能存在偏差（如建库过程中的 PCR duplication）</p>
 <p>fastqc 抽取 reads 文件前 200,000 条 reads 统计其重复情况，重复数目大于等于 10 的 reads 被合并统计，这也是为什么我们看到上图的中间那里略有上扬，大于 75bp 的 reads 只取 50bp 进行比较，由于 reads 越长错误率越高，所以其重复程度仍有可能被低估</p>
 <p><strong>Overrepresented sequences</strong></p>
-<p><img alt="" src="/images/20230907193916.jpg"/></p>
+<p><img alt="" src="/i/20230907193916.jpg"/></p>
 <p>过度重复出现的序列的统计信息，上图中没有</p>
 <p><strong>Adapter Content</strong></p>
-<p><img alt="" src="/images/20230907193956.jpg"/></p>
+<p><img alt="" src="/i/20230907193956.jpg"/></p>
 <p>衡量的是序列中两端 adapter 的情况</p>
 <p>如果在当时 fastqc 分析的时候-a 选项没有内容，则默认使用图例中的四种通用 adapter 序列进行统计</p>
 <p>上图中 adapter 都已经去除，如果有 adapter 序列没有去除干净的情况，在后续分析的时候需要先使用 cutadapt 等软件进行去接头</p>
@@ -328,7 +328,7 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 <pre><code class="lang-bash">hisat2 -x oryza_sativa/oryza_sativa -p 5 -1 SRR25909836_1P.fastq.gz -2 RR25909836_2P.fastq.gz -S SRR25909836.sam
 </code></pre>
 <p>注意-x 后跟索引文件，不加拓展名，保证 ht2 文件和 fa 文件的文件名一致即可，这里由于前面过滤后的序列是没有拓展名的，所以会提示 Warning: Unsupported file format，不影响结果</p>
-<p><img alt="" src="/images/20230907203952.jpg"/></p>
+<p><img alt="" src="/i/20230907203952.jpg"/></p>
 <p>运行完毕后便得到 sam 文件，还会输出一段信息</p>
 <pre><code class="lang-bash">z -S oryza_sativa.sam
 21675765 reads; of these:
@@ -414,9 +414,9 @@ multiqc ./fastqc_report # 将多个质量检测报告合并
 </code></pre>
 <p>oryza_sativa.gff3 就是最初下载的注释文件，如果要统计多个文件的话，在-p 后面跟上就可以，会生成 counts、counts.summary 两个文件，</p>
 <p>counts.summary 文件是计数统计情况</p>
-<p><img alt="" src="/images/20230907202859.jpg"/></p>
+<p><img alt="" src="/i/20230907202859.jpg"/></p>
 <p>counts 文件是基因的具体信息</p>
-<p><img alt="" src="/images/20230907203131.jpg"/></p>
+<p><img alt="" src="/i/20230907203131.jpg"/></p>
 <p>我这里只有一组数据，所以数量统计也只有一列，通常做 RNA-Seq 时是需要多组数据进行分析的，将 bam 文件跟在-p 参数后面即可。</p>
 <h2>参考</h2>
 <ul>
