--- a/yuanj.top/RNA-Seq 上游分析实践.html
+++ b/yuanj.top/RNA-Seq 上游分析实践.html
@@ -1,9 +1,9 @@
-<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/posts/rna-seq-upstream-analysis-practice.md">仓库源文</a>，<a href="https://yuanj.top/rna-seq-upstream-analysis-practice">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/rna-seq-upstream-analysis-practice.md">仓库源文</a>，<a href="https://yuanj.top/rna-seq-upstream-analysis-practice">站点原文</a></h2>
 <p>之前那一篇文章主要讲的是一些知识与工具的用法，这次用六组数据进行分析，得到基因表达矩阵。</p>
 &lt;!--more--&gt;
 
 <p>首先从NCBI SRA数据库搜索合适的数据，查看数据是双端测序的数据之后，多选条目，直接生成 Accession list。</p>
-<p><img alt="" src="/images/20230908203392.jpg"/></p>
+<p><img alt="" src="/i/20230908203392.jpg"/></p>
 <p>我使用的是下列数据：</p>
 <pre><code class="lang-txt">SRR25907783
 SRR25907784
@@ -25,9 +25,9 @@ cd SRR
 nohup fastq-dump --gzip --split-3 ./*.sra -O ../fastqgz
 </code></pre>
 <p>这里千万不要在程序没有运行完成的时候就进行下一步操作。使用 <code>top</code> 可以查看后台进程：</p>
-<p><img alt="" src="/images/20230908204934.jpg"/></p>
+<p><img alt="" src="/i/20230908204934.jpg"/></p>
 <p>当程序运行完成后便可看到后台任务中已经没有前面运行的程序了：</p>
-<p><img alt="" src="/images/20230908205137.jpg"/></p>
+<p><img alt="" src="/i/20230908205137.jpg"/></p>
 <p>同一目录下的 <code>nohup.out</code> 文件中是后台进程的运行记录。</p>
 <p>拆分完成后就需要进行质量检测，使用通配符批量检测，并且将检测报告放在单独一个文件夹以便后面进行压缩：</p>
 <pre><code class="lang-bash">mkdir fastqc_report
@@ -92,6 +92,6 @@ fi
 </code></pre>
 <p>至此完成，拿到基因表达矩阵。</p>
 <p>个人习惯完成分析后把文件进行一下归类：</p>
-<p><img alt="" src="/images/20230908205327.jpg"/></p>
+<p><img alt="" src="/i/20230908205327.jpg"/></p>
 <p>最后将数据下载到本地进行下游分析：</p>
-<p><img alt="" src="/images/20230908205772.jpg"/></p>
+<p><img alt="" src="/i/20230908205772.jpg"/></p>
