--- a/yuanj.top/ATAC-Seq 分析流程.html
+++ b/yuanj.top/ATAC-Seq 分析流程.html
@@ -4,7 +4,7 @@
 
 <h2>ATAC-seq 概述</h2>
 <p>虽然 ATAC-seq 实验方法操作相对简单且结果稳定，但是专门为 ATAC-seq 测序数据开发的生物信息学分析软件却非常少。由于 ATAC-seq 和 ChIP-seq 数据的相似性较高，ChIP-seq 分析使用的软件一般也可用于 ATAC-seq 的分析，但是使用 ChIP-seq 软件分析得到的 ATAC-seq 结果尚未得到系统性的评估。</p>
-<p><img alt="" src="/images/20240503133961.jpg"/></p>
+<p><img alt="" src="/i/20240503133961.jpg"/></p>
 <ul>
 <li>step1：质控</li>
 <li>step2：比对</li>
@@ -53,7 +53,7 @@
 <p>先创建 conda 虚拟环境，安装所需要的软件。</p>
 <h2>数据获取与预处理</h2>
 <p>从 NCBI SRA 数据库下载 SRR_Acc_List.txt 文件：</p>
-<p><img alt="" src="/images/20240503134998.jpg"/></p>
+<p><img alt="" src="/i/20240503134998.jpg"/></p>
 <p>后面的分析都可以基于这个文件进行批处理。</p>
 <p>使用 sra-tools 工具批量下载测序数据，下载比较慢，就用 nohup 挂在后台下载，自己可以做点别的事：</p>
 <pre><code class="lang-bash">#!/bin/bash
@@ -231,13 +231,13 @@ done
 </ul>
 <h2>deeptools 计算基因组区段 reads 覆盖度</h2>
 <p>deeptools 包含了很多的工具：</p>
-<p><img alt="" src="/images/20240503143801.jpg"/></p>
+<p><img alt="" src="/i/20240503143801.jpg"/></p>
 <p>这里我们主要使用的是 bamCoverage 和 computeMatrix。</p>
 <h3>bamCoverage</h3>
 <p>bamCoverage 利用测序数据比对结果转换为基因组区域 reads 覆盖度结果。可以自行设定覆盖度计算的窗口大小 (bin)。</p>
 <pre><code class="lang-bash">bamCoverage -b reads.bam -o coverage.bw
 </code></pre>
-<p><img alt="" src="/images/20240503144555.jpg"/></p>
+<p><img alt="" src="/i/20240503144555.jpg"/></p>
 <p>必须的参数：</p>
 <ul>
 <li>--bam, -b：要处理的 BAM 文件</li>
@@ -265,7 +265,7 @@ done
 done
 </code></pre>
 <p>这里就需要我们前面给 bam 文件创建的 samtools 索引，不然的话会报错。完成之后会输出一系列 bw 文件，这个文件可以导入到 <a href="https://igv.org/app/">IGV</a> 进行可视化：</p>
-<p><img alt="" src="/images/20240503150195.jpg"/></p>
+<p><img alt="" src="/i/20240503150195.jpg"/></p>
 <h3>computeMatrix</h3>
 <pre><code class="lang-bash">computeMatrix [-h] [--version]  ...
 </code></pre>
@@ -320,7 +320,7 @@ done
 <p>计算完成之后绘制多个样本的折线图在同一个图内：</p>
 <pre><code class="lang-bash">plotProfile --dpi 720 -m TSS.gz -out TSS.pdf --plotFileFormat pdf --perGroup
 </code></pre>
-<p><img alt="" src="/images/20240503152251.jpg"/></p>
+<p><img alt="" src="/i/20240503152251.jpg"/></p>
 <p>这个图左边是前面绘制的两个热图+折线图，右边是前面绘制多个样本折线图在同一图内。</p>
 <h2>Chipseek 可视化 peak</h2>
 <p>R 包 ChIPseeker 主要是为了能对 ChIP-seq 数据进行注释与可视化，主要对 peak 位置及 peak 邻近基因的注释。然而，在之后对 ChIPseeker 的应用中，发现它不局限于 ChIP-seq，可用于其他的 peak（如 ATAC-seq，DNase-seq 等富集得到的）注释，甚至还可用于 long intergenic non-coding RNAs (lincRNAs) 的注释。该包功能强大之处还是在于可视化上。</p>
@@ -358,7 +358,7 @@ plotAnnoPie(RSV_peakAnno)
 peakAnno &lt;- lapply(peaks, annotatePeak, tssRegion = c(-3000, 3000), TxDb = spombe)
 plotAnnoBar(peakAnno)
 </code></pre>
-<p><img alt="" src="/images/20240503154417.jpg"/></p>
+<p><img alt="" src="/i/20240503154417.jpg"/></p>
 <h2>在染色体上可视化 peaks 的位置</h2>
 <p>这个使用 TBtools 来进行，先制作一个染色体长度文件：</p>
 <pre><code class="lang-txt">1   43270923
@@ -375,7 +375,7 @@ plotAnnoBar(peakAnno)
 12  27531856
 </code></pre>
 <p>然后使用 TBtools 的 circos 绘图工具，只把染色体长度文件导入：</p>
-<p><img alt="" src="/images/20240503154793.jpg"/></p>
+<p><img alt="" src="/i/20240503154793.jpg"/></p>
 <p>修改 macs2 输出文件中的 bed 文件，只保留染色体、开始位置、终止位置和值四列即可，如：</p>
 <pre><code>1   1074    1075    33.7137
 1   84253   84254   2.21489
@@ -384,9 +384,9 @@ plotAnnoBar(peakAnno)
 1   104876  104877  6.8855
 </code></pre>
 <p>将文件导入到 TBtools：</p>
-<p><img alt="" src="/images/20240503155145.jpg"/></p>
+<p><img alt="" src="/i/20240503155145.jpg"/></p>
 <p>然后改一下颜色、字体什么的进行一下简单的美化：</p>
-<p><img alt="" src="/images/20240503155277.jpg"/></p>
+<p><img alt="" src="/i/20240503155277.jpg"/></p>
 <p>到这里大致的流程基本上就完成了，还有一些分析就是视情况才做的了。</p>
 <h2>参考资料</h2>
 <ul>
